Colab notebook, final csv generation for splits

--- a/src/plot_quality_prediction/plot_quality_finetuning.ipynb
+++ b/src/plot_quality_prediction/plot_quality_finetuning.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "plot_quality_finetuning.ipynb",
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -22,8 +23,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "FeL7PD6gKIaY",
-        "outputId": "3c6c98d9-23b0-45d9-eeab-4d24db223b46"
+        "id": "LVFQ6l2he17J",
+        "outputId": "6ba89f45-9e1d-4414-ca28-fb5255b93f7e"
       },
       "source": [
         "from google.colab import drive\n",
@@ -46,8 +47,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "kQenPyNUL_8U",
-        "outputId": "297c1f54-3e23-41aa-b65b-7b32bdc6cbe4"
+        "id": "Rhcq2GawfBbd",
+        "outputId": "403daf91-943a-4399-d5c0-60cc713fd7ed"
       },
       "source": [
         "%tensorflow_version 2.x\n",
@@ -72,12 +73,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 595
-        },
-        "id": "oJHxiqdXMG8h",
-        "outputId": "d9096f80-1b96-40af-9ca6-c85550f6c06b"
+        "id": "8OjUkBzzfIqV"
       },
       "source": [
         "from drive.MyDrive.how_good_is_my_plot.fine_tune_for_plots import train_model, initialize_model\n",
@@ -95,106 +91,232 @@
         "import copy\n",
         "import numpy as np\n",
         "\n",
-        "# The split we are training and testing on\n",
-        "split = 1\n",
         "\n",
-        "# Data directory on which you want to train the model\n",
-        "data_dir = f\"drive/MyDrive/how_good_is_my_plot/final_plots_forMT\"\n",
+        "def train_and_test(data_dir, num_epochs, learning_rate, regularization, batch_size, phase):\n",
         "\n",
-        "np.random.seed = 0\n",
+        "    # Initialize the model for this run\n",
+        "    num_classes = 1\n",
+        "    input_size = 224\n",
+        "    model_ft = initialize_model(num_classes, use_pretrained=True)\n",
         "\n",
-        "# Number of classes in the dataset\n",
-        "num_classes = 1\n",
+        "    # Resizing and normalizing data\n",
+        "    data_transforms = transforms.Compose([\n",
+        "            transforms.Resize((input_size, input_size)),\n",
+        "            transforms.ToTensor(),\n",
+        "            transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])])\n",
         "\n",
-        "# Batch size for training (change depending on how much memory you have)\n",
-        "batch_size = 10\n",
+        "    print(\"Initializing Datasets and Dataloaders...\")\n",
         "\n",
-        "# Number of epochs to train for  -> can leave this on 50 - the model with best validation accuracy will be saved.\n",
-        "num_epochs = 50\n",
+        "    # Create training and validation datasets\n",
+        "    image_datasets = {x: RegressionDataset(data_dir, f\"drive/MyDrive/how_good_is_my_plot/csv_splits/{phase}_{x}.csv\", data_transforms) for x in ['train', 'val']}\n",
         "\n",
-        "# Initialize the model for this run\n",
-        "input_size = 224\n",
-        "model_ft = initialize_model(num_classes, use_pretrained=True)\n",
+        "    # Create training and validation dataloaders\n",
+        "    dataloaders_dict = {\n",
+        "        x: torch.utils.data.DataLoader(image_datasets[x], batch_size=batch_size, shuffle=True, num_workers=2) for x in\n",
+        "        ['train', 'val']}\n",
         "\n",
-        "# Resizing and normalizing data\n",
-        "data_transforms = {\n",
-        "    'train': transforms.Compose([\n",
-        "        transforms.Resize((input_size, input_size)),\n",
-        "        transforms.ToTensor(),\n",
-        "        transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
-        "    ]),\n",
-        "    'val': transforms.Compose([\n",
-        "        transforms.Resize((input_size, input_size)),\n",
-        "        transforms.ToTensor(),\n",
-        "        transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
-        "    ]),\n",
-        "}\n",
+        "    # Detect if we have a GPU available\n",
+        "    device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
         "\n",
-        "print(\"Initializing Datasets and Dataloaders...\")\n",
+        "    # Send the model to GPU\n",
+        "    model_ft = model_ft.to(device)\n",
         "\n",
-        "# Create training and validation datasets\n",
-        "image_datasets = {x: RegressionDataset(data_dir, f\"drive/MyDrive/how_good_is_my_plot/csv_splits/split{split}_{x}.csv\",\n",
-        "                                        data_transforms[x]) for x in ['train', 'val']}\n",
+        "    params_to_update = model_ft.parameters()\n",
         "\n",
-        "# Create training and validation dataloaders TUKROJREOGJOREJGRGJEOŠREJOREJGŠER\n",
-        "dataloaders_dict = {\n",
-        "    x: torch.utils.data.DataLoader(image_datasets[x], batch_size=batch_size, shuffle=True, num_workers=2) for x in\n",
-        "    ['train', 'val']}\n",
+        "    optimizer_ft = optim.Adam(params_to_update, lr=learning_rate, weight_decay=regularization)\n",
         "\n",
-        "# Detect if we have a GPU available\n",
-        "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+        "    # Setup the loss fxn\n",
+        "    criterion = nn.MSELoss()\n",
         "\n",
-        "# Send the model to GPU\n",
-        "model_ft = model_ft.to(device)\n",
+        "    # Train\n",
+        "    model, best_val_loss = train_model(model_ft, dataloaders_dict, criterion, optimizer_ft, device, num_epochs=num_epochs, regression=True)\n",
         "\n",
-        "params_to_update = model_ft.parameters()\n",
+        "    # Test\n",
+        "    test_dataset = RegressionDataset(data_dir, f\"drive/MyDrive/how_good_is_my_plot/csv_splits/{phase}_test.csv\", data_transforms)\n",
         "\n",
-        "# you can change learning rate here\n",
-        "learning_rate = 0.0001\n",
-        "optimizer_ft = optim.Adam(params_to_update, lr=learning_rate)\n",
+        "    # Create test dataloader\n",
+        "    dataloader_test = torch.utils.data.DataLoader(test_dataset, batch_size=batch_size, shuffle=True, num_workers=2)\n",
         "\n",
-        "# Setup the loss fxn\n",
-        "criterion = nn.MSELoss()\n",
+        "    criterion = nn.MSELoss(reduction='none')\n",
         "\n",
-        "# Train and evaluate\n",
-        "model_ft = train_model(model_ft, dataloaders_dict, criterion, optimizer_ft, device, num_epochs=num_epochs, regression=True)\n",
+        "    test_loss = []\n",
+        "    for inputs, labels in dataloader_test:\n",
+        "        inputs = inputs.to(device)\n",
+        "        labels = labels.to(device)\n",
         "\n",
-        "torch.save(model_ft.state_dict(), f\"drive/MyDrive/how_good_is_my_plot/cnn_weights/resnet101_quality.pth\")"
+        "        outputs = model(inputs)\n",
+        "\n",
+        "        loss = criterion(outputs, labels)\n",
+        "        test_loss.append(loss.flatten().tolist())\n",
+        "    \n",
+        "    # test_loss /= len(dataloader_test.dataset)\n",
+        "    test_loss = [l for list in test_loss for l in list]\n",
+        "    \n",
+        "    return test_loss, best_val_loss\n",
+        "\n",
+        "def training_parameters_choice(learning_rates, lambdas, batch_sizes):\n",
+        "\n",
+        "    num_epochs = 30\n",
+        "    num_classes = 1\n",
+        "    data_dir = f\"drive/MyDrive/how_good_is_my_plot/final_plots_forMT\"\n",
+        "\n",
+        "    best_parameters = None\n",
+        "    best_loss = 1e10\n",
+        "\n",
+        "    for lr in learning_rates:\n",
+        "      for reg in lambdas:\n",
+        "        for bs in batch_sizes:\n",
+        "          current_loss = 0\n",
+        "          for split in range(1, 6):\n",
+        "            phase = f'split{split}'\n",
+        "            print(f'Currently on {phase} with parameters: {lr, reg, bs}')\n",
+        "            test, _ = train_and_test(data_dir, num_epochs, lr, reg, bs, phase)\n",
+        "            current_loss += np.mean(test)\n",
+        "          current_loss /= 5\n",
+        "\n",
+        "          if current_loss < best_loss:\n",
+        "            best_parameters = [lr, reg, bs]\n",
+        "\n",
+        "    return best_parameters\n"
       ],
-      "execution_count": 7,
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "puHJP4gOfShA",
+        "outputId": "57731590-49b5-4ad5-8b0f-c4cceb9e278f"
+      },
+      "source": [
+        "learning_rates = [1e-4, 1e-5, 1e-6]\n",
+        "lambdas = [1e-3, 1e-5]\n",
+        "batch_sizes = [20, 50]\n",
+        "\n",
+        "best_parameters = training_parameters_choice(learning_rates, lambdas, batch_sizes)\n",
+        "# best_parameters = [1e-05, 1e-05, 50]\n",
+        "print('BEST PARAMETERS:', best_parameters)\n",
+        "\n",
+        "data_dir = f\"drive/MyDrive/how_good_is_my_plot/final_plots_forMT\"\n",
+        "test_loss, best_val_loss = train_and_test(data_dir, 30, *best_parameters, 'final')\n",
+        "\n",
+        "print('Best validation loss: ', best_val_loss)\n",
+        "print('MSE on test data: ', np.mean(test_loss), '+-', np.std(test_loss)/np.sqrt(len(test_loss)))"
+      ],
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "Currently on split1 with parameters: (0.0001, 0.001, 20)\n",
             "Initializing Datasets and Dataloaders...\n",
-            "Epoch 0/49\n",
+            "Epoch 0/29\n",
             "----------\n",
-            "train Loss: 159.2355\n",
-            "val Loss: 8.8098\n",
+            "train Loss: 172.3238\n",
+            "val Loss: 42.5847\n",
             "\n",
-            "Epoch 1/49\n",
+            "Epoch 1/29\n",
             "----------\n",
-            "train Loss: 143.4390\n",
-            "val Loss: 36.4210\n",
+            "train Loss: 149.6264\n",
+            "val Loss: 39.3108\n",
             "\n",
-            "Epoch 2/49\n",
+            "Epoch 2/29\n",
+            "----------\n",
+            "train Loss: 126.0687\n",
+            "val Loss: 66.5159\n",
+            "\n",
+            "Epoch 3/29\n",
+            "----------\n",
+            "train Loss: 106.4935\n",
+            "val Loss: 56.1858\n",
+            "\n",
+            "Epoch 4/29\n",
+            "----------\n",
+            "train Loss: 70.4726\n",
+            "val Loss: 43.8947\n",
+            "\n",
+            "Epoch 5/29\n",
+            "----------\n",
+            "train Loss: 59.0512\n",
+            "val Loss: 50.4508\n",
+            "\n",
+            "Epoch 6/29\n",
+            "----------\n",
+            "train Loss: 51.0617\n",
+            "val Loss: 45.5927\n",
+            "\n",
+            "Epoch 7/29\n",
+            "----------\n",
+            "train Loss: 47.5581\n",
+            "val Loss: 37.4330\n",
+            "\n",
+            "Epoch 8/29\n",
+            "----------\n",
+            "train Loss: 38.2884\n",
+            "val Loss: 33.7895\n",
+            "\n",
+            "Epoch 9/29\n",
+            "----------\n",
+            "train Loss: 34.8576\n",
+            "val Loss: 39.7444\n",
+            "\n",
+            "Epoch 10/29\n",
+            "----------\n",
+            "train Loss: 30.3478\n",
+            "val Loss: 63.6899\n",
+            "\n",
+            "Epoch 11/29\n",
+            "----------\n",
+            "train Loss: 28.6992\n",
+            "val Loss: 39.3737\n",
+            "\n",
+            "Epoch 12/29\n",
+            "----------\n",
+            "train Loss: 20.6549\n",
+            "val Loss: 26.8478\n",
+            "\n",
+            "Epoch 13/29\n",
+            "----------\n",
+            "train Loss: 27.1849\n",
+            "val Loss: 30.8099\n",
+            "\n",
+            "Epoch 14/29\n",
+            "----------\n",
+            "train Loss: 19.4423\n",
+            "val Loss: 35.7630\n",
+            "\n",
+            "Epoch 15/29\n",
+            "----------\n",
+            "train Loss: 24.2290\n",
+            "val Loss: 59.4376\n",
+            "\n",
+            "Epoch 16/29\n",
+            "----------\n",
+            "train Loss: 26.6163\n",
+            "val Loss: 33.5692\n",
+            "\n",
+            "Epoch 17/29\n",
+            "----------\n",
+            "train Loss: 22.8383\n",
+            "val Loss: 29.5233\n",
+            "\n",
+            "Epoch 18/29\n",
+            "----------\n",
+            "train Loss: 16.4096\n",
+            "val Loss: 28.1621\n",
+            "\n",
+            "Epoch 19/29\n",
+            "----------\n",
+            "train Loss: 12.7889\n",
+            "val Loss: 34.8963\n",
+            "\n",
+            "Epoch 20/29\n",
             "----------\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-7-0045e61cc89d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m \u001b[0;31m# Train and evaluate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 78\u001b[0;31m \u001b[0mmodel_ft\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_ft\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdataloaders_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer_ft\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_epochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnum_epochs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mregression\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     79\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_ft\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf\"drive/MyDrive/how_good_is_my_plot/cnn_weights/resnet101_quality.pth\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/content/drive/MyDrive/how_good_is_my_plot/fine_tune_for_plots.py\u001b[0m in \u001b[0;36mtrain_model\u001b[0;34m(model, dataloader, criterion, optimizer, device, num_epochs, regression)\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m             \u001b[0;31m# Iterate over data.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m             \u001b[0;32mfor\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdataloader\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mphase\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m                 \u001b[0minputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m                 \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/torch/utils/data/dataloader.py\u001b[0m in \u001b[0;36m__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    515\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_sampler_iter\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    516\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 517\u001b[0;31m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_next_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    518\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_num_yielded\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    519\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_dataset_kind\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0m_DatasetKind\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mIterable\u001b[0m \u001b[0;32mand\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/torch/utils/data/dataloader.py\u001b[0m in \u001b[0;36m_next_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1182\u001b[0m             \u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1183\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_tasks_outstanding\u001b[0m \u001b[0;34m-=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1184\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_dataset_kind\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0m_DatasetKind\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mIterable\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1185\u001b[0m                 \u001b[0;31m# Check for _IterableDatasetStopIteration\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1186\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_utils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mworker\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_IterableDatasetStopIteration\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
         }
       ]
     }
