--- a/src/plot_quality_prediction/categories_analysis.ipynb
+++ b/src/plot_quality_prediction/categories_analysis.ipynb
@@ -599,25 +599,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.4094435108137017,\n",
-       " 0.34214439893302395,\n",
-       " 0.4113962394934684,\n",
-       " 0.3218835779311605,\n",
-       " 0.47333320352676234]"
+       "[0.3922047496389462,\n",
+       " 0.3078052083190671,\n",
+       " 0.35305708777880457,\n",
+       " 0.2765810734535024,\n",
+       " 0.44553864484565797]"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 389,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# correlations between categories and winer\n",
     "corr_with_winners = []\n",
     "for cat in categories:\n",
     "    cor = df_num['winners'].corr(df_num[cat])\n",
@@ -1200,6 +1201,103 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 390,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>legend</th>\n",
+       "      <th>colour</th>\n",
+       "      <th>axes</th>\n",
+       "      <th>element_sizes</th>\n",
+       "      <th>readability</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>legend</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.067207</td>\n",
+       "      <td>0.177962</td>\n",
+       "      <td>0.142127</td>\n",
+       "      <td>0.230197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>colour</th>\n",
+       "      <td>0.067207</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.029137</td>\n",
+       "      <td>0.061506</td>\n",
+       "      <td>0.171806</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>axes</th>\n",
+       "      <td>0.177962</td>\n",
+       "      <td>-0.029137</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.009508</td>\n",
+       "      <td>0.175550</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>element_sizes</th>\n",
+       "      <td>0.142127</td>\n",
+       "      <td>0.061506</td>\n",
+       "      <td>-0.009508</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.157839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>readability</th>\n",
+       "      <td>0.230197</td>\n",
+       "      <td>0.171806</td>\n",
+       "      <td>0.175550</td>\n",
+       "      <td>0.157839</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 legend    colour      axes  element_sizes  readability\n",
+       "legend         1.000000  0.067207  0.177962       0.142127     0.230197\n",
+       "colour         0.067207  1.000000 -0.029137       0.061506     0.171806\n",
+       "axes           0.177962 -0.029137  1.000000      -0.009508     0.175550\n",
+       "element_sizes  0.142127  0.061506 -0.009508       1.000000     0.157839\n",
+       "readability    0.230197  0.171806  0.175550       0.157839     1.000000"
+      ]
+     },
+     "execution_count": 390,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# correlations between categories\n",
+    "dft[categories].corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 340,
    "metadata": {},
    "outputs": [
@@ -1273,6 +1371,7 @@
     }
    ],
    "source": [
+    "# dort the data by correlation\n",
     "df_cat_count['corr'] = corr_with_winners\n",
     "df_cat_count = df_cat_count.sort_values(by=['corr'], ascending=False)\n",
     "df_cat_count = df_cat_count.drop(columns=['corr'])\n",
@@ -1311,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [
     {
@@ -1320,13 +1419,13 @@
        "273"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 391,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
+    "# calculate the number of lucky winners - where plot won but had less than half categories selected\n",
     "df_lw = pd.DataFrame(columns = df_num.columns)\n",
     "lucky_winners = 0\n",
     "for i, row in df_num.iterrows():\n",
@@ -1537,10 +1636,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# count of categories for lucky winners\n",
     "counts = []\n",
     "for cat in categories:\n",
     "    c = 0\n",
